# langbench

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  METHODOLOGY.md  README.md  README.md.j2  bench.schema.json  build.rs  langbench.py  pyproject.toml  report.md.j2  requirements.txt  results.csv  results.json  workload.schema.json
.cargo/: config.toml
.github/: dependabot.yaml  release.yaml
.github/workflows/: bench.yaml  build.yaml  langbench.yaml  pages.yaml  pre-commit.yaml  quality.yaml  test.yaml
base/: Dockerfile  entrypoint.sh  random.c
benchmarks/bun/: Dockerfile  mt-mergesort.ts  st-mergesort.ts
benchmarks/bunjs/: Dockerfile  langbench.js  multithreads.js  worker.js
benchmarks/bunjs-worker/: Dockerfile  langbench.js  worker.js
benchmarks/c/: Dockerfile  langbench.c  mt-mergesort.c  multithreads.c  singlethread.c  st-mergesort.c
benchmarks/c-pthread/: Dockerfile  langbench.c
benchmarks/cpp/: Dockerfile  mt-mergesort.cpp  st-mergesort.cpp
benchmarks/csharp/: Dockerfile  MtMergeSort.csproj  StMergeSort.csproj
benchmarks/deno/: Dockerfile  mt-mergesort.ts  st-mergesort.ts
benchmarks/go/: Dockerfile  go.mod
benchmarks/graalvm/: Dockerfile  MtMergeSort.java  StMergeSort.java
benchmarks/java/: Dockerfile  MultiThread.java  SingleThread.java  StMergeSort.java
benchmarks/julia/: Dockerfile  mt_mergesort.jl  st_mergesort.jl
benchmarks/mandelbrot/: workload.yaml
benchmarks/rust/: Cargo.toml  Dockerfile  multithreads.rs  singlethread.rs
csv/: multithreads.csv  singlethread.csv
docs/: columns.md
reports/: README.md  aarch64.md  mt-mergesort_aarch64_4_10000000_10.md  mt-mergesort_aarch64_4_10000000_5.md  mt-mergesort_arm64_8_10000000_1.md  mt-mergesort_arm64_8_10000000_5.md  mt-mergesort_arm64_8_1000000_1.md  mt-mergesort_x86_64_4_10000000_10.md  mt-mergesort_x86_64_4_10000000_5.md  st-mergesort_aarch64_4_10000000_10.md  st-mergesort_aarch64_4_10000000_5.md  st-mergesort_arm64_8_10000000_1.md  st-mergesort_arm64_8_10000000_5.md  st-mergesort_arm64_8_1000000_1.md  st-mergesort_x86_64_4_10000000_10.md  st-mergesort_x86_64_4_10000000_5.md  x86_64.md
results/: mt-mergesort_aarch64_4_10000000_10.json  mt-mergesort_aarch64_4_10000000_5.json  mt-mergesort_arm64_8_10000000_5.json  mt-mergesort_x86_64_4_10000000_10.json  mt-mergesort_x86_64_4_10000000_5.json  st-mergesort_aarch64_4_10000000_10.json  st-mergesort_aarch64_4_10000000_5.json  st-mergesort_arm64_8_10000000_5.json  st-mergesort_x86_64_4_10000000_10.json  st-mergesort_x86_64_4_10000000_5.json
samples/: aarch64.ndjson  x86_64.ndjson
site/: .gitignore  astro.config.mjs  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: analysis.rs  cli.rs  compare.rs  discovery.rs  energy.rs  engine.rs  lib.rs  machine.rs  main.py  main.rs  mode.rs  model.py  output.rs  report.rs  runner.rs  sample.rs  shutdown.rs  stats.rs  wasm.rs  workload.rs
templates/: report.md.liquid
tests/: key_conventions.rs  shared_kernel_source.rs  snake_case_manifests.rs
(+193 files in other folders)
