[package]
name = "langbench"
version = "0.1.0"
edition = "2024"
authors = ["Guillaume Leroy <pro.guillaume.leroy@gmail.com>"]
description = "A benchmark harness comparing compiler and runtime backends"
repository = "https://github.com/leroyguillaume/langbench"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
liquid = "0.26.11"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
mockall = "0.15.0"
tempfile = "3.27.0"
