[package]
name = "rust-benchmarks"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3        # Maximum optimization
lto = "fat"         # Link-time optimization
codegen-units = 1   # Optimize for size and speed
panic = "abort"     # Remove panic unwinding code
strip = true        # Strip symbols from binary
debug = false       # Remove debug info
